--- a/FilmKardesligi/Form1.resx
+++ b/FilmKardesligi/Form1.resx
@@ -120,4 +120,165 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pboFoto.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/4Q+4RXhpZgAATU0AKgAAAAgABQESAAMAAAABAAEAAAExAAIAAAAm
+        AAAASgEyAAIAAAAUAAAAcIdpAAQAAAABAAAAhIglAAQAAAABAAAA8AAAAShXaW5kb3dzIFBob3RvIEVk
+        aXRvciAxMC4wLjEwMDExLjE2Mzg0ADIwMjA6MTE6MjYgMTI6Mzg6MzgAAAWQAwACAAAAFAAAAMaQBAAC
+        AAAAFAAAANqSkQACAAAAAzQ5AACSkgACAAAAAzQ5AACgAQADAAAAAQABAAAAAAAAMjAyMDoxMToyNiAx
+        MjozNzoxMAAyMDIwOjExOjI2IDEyOjM3OjEwAAAAAAEACwACAAAAJgAAAQIAAAAAV2luZG93cyBQaG90
+        byBFZGl0b3IgMTAuMC4xMDAxMS4xNjM4NAAABgEDAAMAAAABAAYAAAEaAAUAAAABAAABdgEbAAUAAAAB
+        AAABfgEoAAMAAAABAAIAAAIBAAQAAAABAAABhgICAAQAAAABAAAOKQAAAAAAAABgAAAAAQAAAGAAAAAB
+        /9j/2wBDAAgGBgcGBQgHBwcJCQgKDBQNDAsLDBkSEw8UHRofHh0aHBwgJC4nICIsIxwcKDcpLDAxNDQ0
+        Hyc5PTgyPC4zNDL/2wBDAQkJCQwLDBgNDRgyIRwhMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIy
+        MjIyMjIyMjIyMjIyMjIyMjIyMjL/wAARCADIAMgDASEAAhEBAxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAA
+        AAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIhMUEGE1FhByJxFDKBkaEII0Kx
+        wRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4
+        eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl
+        5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoL/8QAtREAAgECBAQD
+        BAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAVYnLRChYkNOEl8RcYGRomJygp
+        KjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOEhYaHiImKkpOUlZaXmJmaoqOk
+        paanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIR
+        AxEAPwD0ICnAUAOApQKAHAUuKAHYp2KAFxS4oAXFGKADFGKADFJigAxSYoATFNIoAQimkUANIpuKAEIo
+        oAKcKAHAU4CgBwFOxQAoFOAoAXFLtoAXFLigA20YoAMUmKAExSYoAQimkUANIppFACEU0igBpFFAAKcB
+        QA4CnAUAPApwFACgU4CgBwFLigBcUYoAXbSYoAXbSYoATFNIoATFNIoAaRTSKAGkU0igBuKKAACnCgB4
+        FOAoAeBTgKAHAU4CgBQKdigBdtGKAF20mKADFGKAG7aTbQA0imkUAIRTCKAGkUwigBpFFAABTgKAHgU8
+        CgBwFPAoAcBTgKAHAUoFADttGKADFG32oAMUm2gBMUhFADSKaRQAw4zjIz6U0igBpFMIoAYRRQAAU8Cg
+        BwFSAUAOAp4FADgKcBQA4LTgtAC4pcUAGKXbQAmKNhPagDNutXs7WRo3ZjIpwVCmq0Ov20tysbRuiMcb
+        2xxQBs7F9M1yms/b7S4KtcOYXOUYcfhxQBX0aRm1VC7s2VP3jntXUEUAMIphFADCKKAACngUAPAp4FAD
+        wKeBQA4CngUAOxTgKAK91e29kVE77SwyBgkmqLeIrRSNqSt6kCgDXieKaJZY23IwyDWPrr39uBNbylYM
+        YbA5U+poA577bdiRZBcS7lORlv6V12m6gmo228YEi8SJ6H/CgCtrWlC+i86IYuEH/fQ9K49lIJBGCOCK
+        AOj0LVfMVbO4b5h/q2J6+31rWvLWK8tmgmHynoe4PqKAOZstPubTV1V4nKqf9YFO0j610hFAEZFMIoAY
+        aKAAU8CgB4FPAoAeBUgFADgKx9Z1C6spo44doDrnJHNAGM+pXsv3rmT/AICdv8q3dE1bzwLW4b96PuOf
+        4h6fWgDTvrGK/tmik4PVW7qa4y4tpbS4aGZcOp/Aj1FAF/R9UNjL5UpJt3PP+yfWusISWMghXjYc+hFA
+        HJalo8ttc4t0eWFuV2jcV9jilsLDVLe5SeGErjrvIAI9KAOr+bA+UA/XpWZdaHa3d0Z33KW+8F4BPrQA
+        sWi2MJDCLcwOQWJzVwqPSgBhFMIoAYaYRQBGRRQAgp4FAEgFSAUAPAp4FADgKw9fdoLq1mQKWUHGRQBg
+        MS7Mx6k54p8Ecss6RwgmQn5MHBzQB29l9rNqgukCyjgkHOfem32lRagqib5WU8MvXHcUAQR+HbBPvK8n
+        +83+FaUdvFDGscaBVUYA9KAH7aTFADSKaRQAwimkUARkUw0AMIphFAEZooAQU8CgCQU8UASCngUAPArC
+        8SoWNsFBLEkADqaAOfIKkqQQRwRTlVtpcKdq/wAQ7UAdZodyk9gF3MZEJD7jk1Q13Un84W0EhUJ98qcZ
+        PpQBm27Xl1cJBHPJvc4zuPA9a7SOMRRJGCW2gDLHJNAHLaxqkk92Y4JGWKPgbTjce5qDTlur69SITyhB
+        8zkOeBQB17FUQsxwqjknsK43UdTmurtnjkdIxwgBI4oAn0SO5vLze80vkxct8x5PpXSTzJBC80hARRk0
+        AceNQubrVUk8x1DyDChjgCuuNAEZFRkUAMNFADRTxQBIKkFADxUgFADwKw/E3mpHbSxBsoxO4DpxQBzB
+        m3MWdsseST3qRbgiNoxIQjclc8GgCzZX7WUrSRkElSCKgMgZizNlicknuaAOh0JLa2hNxLNEJZBgAsPl
+        WrGr6tFDaGOCVWkk4ypztHegDldy+v8A9euq0lbSxswGuIvOk+aQ7h+VAFXXtVj8oWsEitv5cqe3pXOg
+        b3VFI3McDJoA7CxNlZWiW6XEXHLHcOT61ieINTWeT7NC4MacsQfvGgDP0uJ5dQhKIWVXG4gdK7Q0AMIq
+        M0ARmigBop4oAkFSAUASDjrVWXUY0O2Mb2HftQBWOqT56qo+lRSTy3AO6ViD1APFAFGWyQjPlIy+wrPk
+        tIS2I22N6HpQBWZGifa64P8AOnqQaAHYFJtHpQAYFNKigBMU00ANpCfpQB0vhX/U3J/2l/rW8aAIzUZo
+        AjNFADBUgoAkFSCgDPvrssxhjPyj7x9faqQoAwrjVJfOcR4ABwDSwancW4Dbt2TlgR1oA6RGV0SRD8rj
+        cKrXlkJVMkQxIOoH8VAGZw6+XJnb2PdarMjRSFG6j9aAHg0UAJmkNADaaaAGmmmgDqPCo/0WdvVxW4aA
+        GGozQBGaKAGLTxQBIKSeXybdn7gYFAGDPMLe3NxLny923PqfanW1xDdJvibcB94dxQBz9zbmO4lTHKsf
+        yqLqoFAHVacGGnW4brtq4KAMzU7YRsLhRhWOHHofWqMiebAf78YyPp3oArg8UtACZppNACZppoAaTTTQ
+        B1vhYf8AEukPrIa2WoAjNRmgCNqKAGLUgoAkFVNTbFuq+poA53xLLj7Har91It5Hue9ZdjO1tdRyA8Zw
+        3uKAOiu7JLk5B2uBw3tVSDRMSbppQVH8K96ALWo332SJYoh+8Ycf7IrKi1C7jk3iZj6g9DQB0EM0ep2D
+        AgAuNrL/AHT2NYto5SXY4+6cH+RoAhkTypnTspwKbmgBDTc0AITTCaAEJphoA7LwuP8AiUE+sprXagCM
+        1GaAIzRQAwVIKAHiqep/cj+poA5PWjI96rOvyiMKp9cVUgRpZUjUZJOKAOsKk7Qr4K/rULGeW5ie3kUx
+        KcSDNAGdrSkXit/Cy8VnigDV0J2F06joUyaddps1aTaMKw3fiaAKt1nzQT3UVBQAlJQAhppoAaaaaAOy
+        8MjGkf8AbQmtc0ARmozQBG1FAEYqQUAPFV9RTdbhv7poAyXiSZNkiBl96jijs7NuNiMe5PNAEywsL0XC
+        yfIyYK+tQxhfs07WD5kL5IP8qAJru1N7bLuASUDP0PpWG9nco+wwvn2FAG5pFk1rG0kwxI4wB6CoNVO3
+        UFI6mMUAULg8p/u8/mahzQAUhoAbTTQA0mmE0Adt4cGNHT3Y1qGgCM1GaAIzRQBGKkFAEgokQSwsh/iF
+        AGFITErkjlQePeuWaRpJGdzlicnNAGppF60U6wOxMUnAz2Nacpi06GR0TBZumepoAzV1m7V8nYR/dxW3
+        ZXkd5B5icMvDr6UAWQfyrG1Vt1+f9kAUAUJ2zMcdB8tRUAGaTNADSaaaAGmmmgDu9CG3RbfjsT+tXyaA
+        IzUZoAjNFAEYp4oAkFSA0AZ2owEHzlHB+97GsDWNLIjGoWq5hb/WqP8Alm3+FAGTb5a4iC9SwxW5re4x
+        Rt2D80AYectWnokpj1BUHSRSrUAdFuCqWPQDJrCmkDmR3PzEk496AKB680UAJSUAIabQA0000Ad5ov8A
+        yB7b2WrpNAEZNMJoAjNFAEYp4NADwakBoAcVDoVYZB6isuWOawkLRNmNuCGGQfY0AZ6Wlul01wkQRj2X
+        oPpUs8K3EDRP0b9KAMNtOmikKMOP7w5zWjplj5U3nsCMDAz70AaLxT3h8iBSR/E39Kifw5qDNn91jsN1
+        AETeF9QJ48r/AL6pP+EX1D1j/wC+qAD/AIRfUP8Apl/31Sf8IvqH/TL/AL6oAQ+F9Q/6Zf8AfVNPhjUP
+        +mf/AH1QA3/hGL/1i/76pp8Mah6x/wDfVAHUWUBtbGKAnJVcGpSaAGE1GaAGGigCIU8GgB4NSA0APBpx
+        CspVgCD1BoApS6bzmFgB6HtUDWc8Y/1ZPuKACO1mc/6sj6jFX4dPH/LQ/gKAL8SRxLtRQo9qfmgBc0Zo
+        ATNITQAhNNJoAYTTSaAGE0wmgBhNRk0AMJooAiBp4oAeDUgoAcDUgNADgaeDQA4GnA0ALmlzQAuaTNAB
+        mkzQA0mmk0ANJppNADCaYTQAwmmE0AMJooAiBp4NADwaeDQA8GnA0APBpwNADgacDQAuaXdQAuaM0AJu
+        pM0AITTc0ANJppNADCaaTQBGTTSaAGE0UARA08GgB4NPBoAcDTwaAHA04GgB2aUGgBd1LmgBc0bqAEzS
+        ZoAQmkJoAaTTSaAGE00mgBhNNJoAYTRQBEDTwaAHA08GgBwNOBoAfmlBoAdmlzQAuaXNAC5ozQAmaTNA
+        CE0maAGk00mgBpNNJoAYTTSaAGE0UAf/2QD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoM
+        DAsKCwsNDhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQU
+        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCADIAMgDASIAAhEB
+        AxEB/8QAHwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQID
+        AAQRBRIhMUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdI
+        SUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5
+        usLDxMXGx8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAA
+        AAECAwQFBgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHB
+        CSMzUvAVYnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3
+        eHl6goOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk
+        5ebn6Onq8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD6xVakVaVVqRVoAFSpFjpVWpljoAaq09Up6rUyx0AR
+        rH7VII6kVPapVSgCFY6eI6nEdOEVAEHl0vl1YEdPEfFAFXy6PLqz5VHl470AVvLpnl1c8ukMdAFLy6aY
+        6uGOmNHQBTaOo2SrrJUTR0AU2jqJkq40dROlAFRl9qiZatstRMtAFVloqVlooAFWplX2pFWp1XPagARa
+        mVaVFqZUoARUqVV9qesdSpHQAxY/apFj9qlWMVIsdAESx+1SCP2qZY6kEftmgCuI/alEdWVi9qd5fHSg
+        CqIqGjFWxEfSgxj0oAqeVjtTTHVsx+1IYz6UAUjHTGj9qutFUbRUAUmjqJo6utHUbR0AUmT2qGSOrzJU
+        DJ1oApMlROtXHSoXWgCmy+lFSsvNFAAq1Oq01Eqwi0ALGlTolJGlWUSgBEjNTqlKkdTpHQA1Y/apVjp6
+        x1MsdAESx1KsdSLF7VKsVAEKxU5Y6sCP2pwjoAq+XR5PtVvy89OaPK/OgCp5Yphiq6Y8nA6npR9lZv4f
+        6UAZ7R1G0dYeu/EbRNCu5bWaSWS6iba8UcR4P1PH61j6b8XtJvtWhtZbea1t5W2i4kIwCehPtQB17J0q
+        F48VtfZY+y7s89eteGfEo+JPDuqNHJqc76fOS8EseEH+6cdCKAPUn2btoZd/93PNRMleO/DO8mm8aW7T
+        TyzFo3H7xy38PvXtMkfWgCjItQOtXnWq7rQBSdaKmkWigBI1qeNaZGtWI1oAkRasRrTY1qxGlADkWp0W
+        hFqwkdACJHU6R96FWuA+JnjLVvC99bW9iY0jniL72TLAg44J4oA9EWOpljPp+lfON14213UOJdWuRjtG
+        /l/+g4r0/wCFvxD/ALUjTR9Tl/01Bi3nY/65f7p/2v50AdXr3ibTPC7RLqNx5LyglECMxbHXoK5e4+M2
+        ixMoit7ucZ5ZUA/Hk11/irwtaeLNJksrobWGWimxzEw7j+tfO+taHd+H9TlsL6PZcRHB9HB6MvsaAPpe
+        xurTVLKG7tZPPt5lDI46EH/P51wHxWuPEWirHf6bdtFpmNkojQbom/vE+hrj/hv48bwrffZLti+lTt8/
+        cwt/fHt617tJHBfWrK6x3FrMmDnlHU/zoA+YV8Ua1Hdx3K6ndGaNwy7pSRnrjHQ1714J8YW/jPSRMu2O
+        8jwtzb/3Wx1HseteU+Nvhvd6HqxGmQTX+nzZaIwqZGj/ANhsdMfyqXwj4R8XaPq1vf2Vg0JHDC4cKrp3
+        UjOf060Adz8Tvh+vimzN9ZoF1WBOOMGZB/Cfcdq8AmhZWZHUqwJBU8EHuD75r63/AHu1SY1RsAkbsgH0
+        rjPEHwr0nxBrD6hP5kLyAeYkJCqx/vfWgDmPhR8QBdxR6FqUv75OLWeQ43j+4T6+ld54k8P2fiPSZrC9
+        XEUgysh4aNuzD3rM0/4Y+H9MkjkSy82WM7lkmdi2fzroWhUZIUAnuKAPCvC/hDVfD3jqGOa0meGFiPtS
+        RnymX13dK9fkSrzxj0wfWoJFoAoSLVZ1q/ItVpFoAoyLRUrrRQAyNasxrUUa1ajXpQBJGtWo1qONasxr
+        QBIi5qyiVHGtWY1oAVUrzT4vXUmk6zol7CkbSxq+BIuQfrXqca15h8brV5n0dY0LyMzKqrySfpQB5PMz
+        XE0kr4DuxY7RgD6VZ0mzu77Ure3slL3juPJ2sFbd25JwKgeNoZGjdSjqcMpHINTw283lPOkb+VGRmVQc
+        Ke2T2oA+k/C/9tSaPAusW6RXygKzq+4OP7xwODUHivwDaeMIYVvT5MsLZSaEYcKeq5PY1jfCzWodU8Mx
+        xeZJJeW7FZzK5Zjk5zz2rmvit43m+3rpOnXDwJb83EkLFSzddmR2A60AdZY/Bjw5a8yxz3f/AF2lIx/3
+        ziuwsdHtNMtYre2gWKGJdqL/AHQOg55r5x0a41vX9VttOtdQuvPuH27vObCjGSx56AV9F2VotjZwWyO8
+        oiQL5krZZsDBJNAFvyfb68daYydj9OteF/Enx5carrj22n3UkNjany1MTECVv4m46+1ZnguHWPFXiGCz
+        TUbtLdP3txIszfKgI4696APoKSP/AAqFlFLNJHawvJIwSKNcszHoAOTXzz408dX2va5PPbXU1vaL8kMc
+        blRtHc47mgD350qGRPavGfhdZat4k1/7RNf3Y0+zw0p81sO3ZBz+dew6tqdvpNjcXtyQkEK72/oB7mgC
+        ORcVXkWvCo/GGqeIPGkFz9qmhjnuV2wrIQoXPTH0r3uRaAKEi1WkXir0i1VkXigCjItFSyCigCGMc4q1
+        HUEf61ajXpQBYjWrMa1BGOlW41oAmjWrUa1AuF5bgdSaxb/xpbWrGO1Q3Mg/i6L/APXoA6mNa8z+OX2u
+        2tdHu7RZA0MrN5sak7Pl6k9quSeO78NnfFCvsuao3eqXesI/m3kkiMPmVWG3HuKAPGpNS82R5Jpd0jnL
+        Mx5JqzDrDR2slstyyW8hDPGGwrEetdxfeGYXUk2kM0Q67VwR+FcpfeHbCSYray/Z5f7rcof8KALfhfxd
+        L4XvJLq2dWZ4mQqTxz0P4Hms97sTyNLJLvkdt7O3Uk8k/nWXNbS2Exinj2OOfYjsQe9WIZFbtQB7H8J7
+        fS9D0+TU7u/tUvrtdqK0q5jiz09icZ/AVqfEb4hWem6G1tp97FLeXYKbomz5aY+Y8d68NZV+vvTPJTJO
+        2gCUzx44YE+mete4/DuHRvCegqkup2f9oXOJblvNXg9k+grwgxpgDFMaJemKAPYPi18QLY2KaRp11HKZ
+        xunkjcEBey59+9eRxqLi4igidRJI4QFjgAnjJPpUDIB0HH8qiZR7GgD6N8LNoPhfRINNt9TsyUG6WTzl
+        +eQjkmvNvi/46i1S5Gk2Vwr2kJ3yuh4kf09wK82IC9PzqJm9h+VAHReA7GfUPFGnPbwvNFFcKZHRchPq
+        e1fRsi9a8y+AS/6DrJ7+bGP0NeoSDrQBSkWq0gq5IKqyd6AKcgop0i0UAV4+1W4+1Vou3erMf9aALUdW
+        41ziqseaZq19/ZulzXAPzhcKPc0AYHizxA80z2Fu2IkIErDgsfT6Vz6cY/zis7VNSTR9LfVLsN9m8zy9
+        3d3PZfXHepdF1my123M9lL5qr/rE6Mn1HpQB55rPjy8N/crbbUUOUViMkAHFP0vx1qWkIkvmCYSPulRl
+        HzAcY/KsnXNHaz1W8hK/PHISPdSeDVPO6FVx05HvQB9B2s0d1bwXVucxTIJUPse351jeJPDC6hE11aJs
+        u15ZV4Eg7/jU3g2OSPwrpSyA7xFnn0JyK34x0IGP6UAeTfJcRm2ut3lc7X/iiPqP8KyJraTT7p4ZcblP
+        BHQj1H4c13vjjRVs5k1KJdsEzbZlH8L+v0P865u7tzqGnMcfv7Zdyn1j7j8OtAGcrZHJozUMbZXmnbvx
+        oAVmFRtSlhTGYUAIzVC5pzNx1qJjmgBrNUDnrUjtULMKAPbvgFH/AMSXU5P706j8hXpkleefAVP+KUu3
+        /vXTD8gK9EloAqSDiqklXJKpyd6AKslFLLRQBVi7Vbj7VUjq3HQBbjPSsLxxcGPS4owfvvn8h/8AXrcj
+        rnfHXMFoT03MP0FAHlnxw1AR/wDCPaPEcQ29oJ3UHq7/AMX5VxPhbVpND1i2ukYhNwWQf3kPBrV+Jz3N
+        x4gglnjIjW3jijk7MFGKwdLtZNQvre2iUtJIwUAdcZ5zQB7H4g8Lwa4wdW8q4UYSQd1Izg1h6V8LzHci
+        S+u1eJTnyoQct9fSuue3Z/KWObY0YAI9cDGaoXEl/f6tZT6bdRyWMbFLlQ3AIoAi8aeKh4fs4rO0UC7k
+        XA44jToCK4ax8YazZXImS/kc5yySYKt7EVo/E2Fl1+KUjEckIC/gTxXJqaAPcNM1G28ceGp0ZVRplMM0
+        X/PN8fKw9s1514dunt70wXCEmFirA9x0Iq/8KbqSPWrmFT8kkBJ9sHI/WpPEVsLXxtdiJdsciCQj3Iyf
+        1oA52+t/sN9cQZysbkKfUdjUJb8ava+T9uVic7o1x+HFZmaAHMajZ6GPpTD3oAazVEz9aex4qFqAGsxq
+        F2p7GonNAH0L8CF/4oV2x967k/kK76XvXB/AtSvgUc8G4cj9K7uTpmgCrJ61Vkq1JVWSgCrJRTZfaigC
+        rHVuM9KpRnpVqNulAF2M1keMrcy6Uso58pwT+NakZp15bC+sZ7dv+Wi4B9+39KAPLrqwt9StzDdQrNF1
+        w3r6/WqljZ6H4am+QwWsz9Gdvm/+tV68kexhuC6HzIVYlfcdq8TmvJL66kuJyXldsktzQB7fBpsi+IE1
+        OG6BtpIfLeHOQ2O47Vn2axtpOpS+HZzJdNPvZW9QeVHsea5P4deJpNP1GPTp5C1ncnaoY/cfsR/hXa30
+        ll4Nsbq4hg2vNJkoDwz9qAJ/EOgP4n0eETKttfRruGecNjlT7V5pceHNUtbjyXsZvMzgbVyD+NaUPxM1
+        mG43kwsgP+pKcYr0nwx4kt/Emmm5twY5IztngJ5QnofcUAZ3w58LyaBaz3N6Nl3cAKI+6IDnn3zWb4/Y
+        w+J4ipwz2y5P4n/Cu7VvX7ted+PpxL4mbHPlIkf44yf50AYOst+8ts8nyhn/AL6NZu6rWrT+ZfSBfupi
+        P8hj+dUtxoAkzUbGmlqYzUADVGzUM1RM1ADWaomanO3FQs3WgD6T+Csfl+A7Yno0jkfpXaSHtXK/ClfK
+        +H+kjGMozfmxrp5G60AQSN1qpIasSGqshoAryGimyUUAU42q1GapRtVmNqAL0bVZjaqMbVajagDlvGmk
+        mOT7dEMJJxJj+Fuxry74keAmW2XxNpEW6wk4vIIxk20nc4/unrXv7xJcwvFKoeNhgqe9cXf2d94Runlt
+        JN1pNlSsihkYf3WH9aAPnnRd82q2SRgl2mTbj616V8UBI1laSD7izEN9SKv23h/TLXWpNTt7NLWZuRHH
+        ny0PfaD0q/qmmxa1pstpNykg6jqD2NAHi+/dIcHJrsvhfqD2XiiOFDlLqN4pB7YyPyIrJuPBt/p908My
+        5QH/AFyDIYeorr/AvhQ6fffb5A6lVKoH6knvQB6F5yRRtI+BGi72PbArzHUrxLlruec/vndmC9yx6flX
+        c3Wn6j4jb+z9OiLqcGaToOP4c1n3HwX8S3Epb/QwvRVEvQflQB5czfMcnnvSFuOtejy/AfxKzZUWo9vN
+        /wDrU3/hQvib1tR/21/+tQB5xTSfWvRz8BfE3/Tp/wB/v/rU0/AXxN62n/f3/wCtQB5u1RMa9Jb4D+JR
+        3tP+/v8A9ao2+BPiXubUf9tf/rUAebNUDd69Lb4E+JPW1/7+n/CoZPgT4lAyGtf+/p/woA9c+GLf8UFp
+        AzgrER+proZG681meF9Jbw/4dsbBjveGMKxHr3q9I1AEcjVVkapZGqrI3WgCOQ0VHI1FAFKNqsxtVKN6
+        sRtQBejb0qxG9UY26VZjagC9G/vUrxx3EbRyIJI2GCrdKpo1WEcUAc/qHgjdJvspQq/883PT6Gs6bw1q
+        NmuRbGT/AGo8Gu4WSp1k6UAcBZ6Be3L4Nq6+u4bf511Gm+D1XH2hwB3ReT+dbiSe+KmWSgCWxtbewhEd
+        vGsSf7I6/WrQk9/0qmJPenrJ70AW/MoMlVfMo8ygCwZKY0lQ+Z70xpKAJWkqF3pjSVE0nvQA53qGR/em
+        s9QtJQAkj9qru1LJJUDvQA2RqqyNT5G681XdqAGSNRUTt70UAU0ap0eqaNUyNQBejarCtVFHNTo9AF5H
+        qdJKoo9TJJQBfSSpkeqCyVOknvQBdWSpVkqislSLJQBd307zqp+afWneZ70AXPMo8yqnmUeafWgCy0vv
+        TWkquZPem+ZQBO0lRNJUTSVE0lAEjyVE8lRtJ1qJ5KAFZ6heSms9Qs/vQAkj9agkfrSu/WoJG60AJI1F
+        QyNRQBTVulTRt60UUATo9To9FFAEqPU6ydKKKAJlkqVJDRRQBIslSeZ70UUAOWT3p4k96KKADzKXzKKK
+        AE8ymmSiigBjSVG0lFFAETSe9RNJRRQBC0lRNJRRQBAz9agkeiigCBmooooA/9k=
+</value>
+  </data>
+  <metadata name="ofdFoto.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
 </root>
